Revert "fix(components, documentation): z-index on header + fake content on header preview"
This reverts commit 8e664f6f8e6b3283bfc3fa7ffd0e2279ec5bfe21.

--- a/packages/components/src/components/post-header/post-header.scss
+++ b/packages/components/src/components/post-header/post-header.scss
@@ -13,8 +13,6 @@
   --main-header-height: 56px;
   --header-height: calc(var(--global-header-height) + var(--main-header-height));
 
-  z-index: 1020;
-
   @include media.min(lg) {
     display: block;
     position: sticky;
@@ -29,7 +27,6 @@
   @include media.max(lg) {
     --global-header-height: 64px;
     --main-header-height: 48px;
-    position: relative;
   }
 }
 
